--- a/src/footerSocial.html
+++ b/src/footerSocial.html
@@ -10,15 +10,15 @@
         <a class="buttonHyperLink" href="https://www.instagram.com/dragracevictoria/?hl=en" target="_blank"><span class="social social-instagram x2"></span></a>
         <a class="buttonHyperLink" href="https://www.youtube.com/user/nostopinLucR" target="_blank"><span class="social social-youtube x2"></span></a>
         <ul>
-          <li><a href="/">Home</a></li>
-          <li> | </li>
-          <li><a href="/Points.html">Points</a></li>
-          <li> | </li>
+          <li><a href="/">Home </a></li>
+          <li style="cursor:default">| </li>
+          <li><a href="/Points.html">Points </a></li>
+          <li style="cursor:default">| </li>
           <li><a href="/Sponsors.html">Sponsors</a></li>
         </ul>
-        <ul>
-          <li><a href="/ContactUs">Contact Us</a></li>
-          <li> | </li>
+        <ul style="cursor:pointer">
+          <li><a href="/ContactUs">Contact Us </a></li>
+          <li style="cursor:default">| </li>
           <li><a href="/AboutUs">About Us</a></li>
         </ul>
       </div>
