--- a/src/test/PointsTEST.html
+++ b/src/test/PointsTEST.html
@@ -38,10 +38,11 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>                        
           </button>
+          <a class="navbar-brand" href="/"><img src="/SISLRA/NavbarLogo.png" alt="SISLRA"></a>
         </div>
         <div class="collapse navbar-collapse" id="myNavbar">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="/"><span class="glyphicon glyphicon-home"></span></a></li>
+            <li><a href="/"><span class="glyphicon glyphicon-home"></span></a></li>
             <li class="dropdown"><a href="/RacerInfo">Racer Info <span class="caret"></span></a>
               <ul class="dropdown-menu">
                 <li><a href="/RacerInfo#Fees">Fees</a></li>
@@ -57,7 +58,7 @@
                 <li><a href="/RacerInfo#Tree">Tree</a></li>
               </ul>
             </li>
-            <li><a href="/Points">Points</a></li>
+            <li class="active"><a href="/Points">Points</a></li>
             <li class="dropdown"><a href="/Events">Events <span class="caret"></span></a>
               <ul class="dropdown-menu">
                 <li><a href="/Events#RaceSchedule">Race Schedule</a></li>
