--- a/src/test/RacerInfoTEST.html
+++ b/src/test/RacerInfoTEST.html
@@ -38,11 +38,12 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>                        
           </button>
+          <a class="navbar-brand" href="/"><img src="/SISLRA/NavbarLogo.png" alt="SISLRA"></a>
         </div>
         <div class="collapse navbar-collapse" id="myNavbar">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="/"><span class="glyphicon glyphicon-home"></span></a></li>
-            <li class="dropdown"><a href="/RacerInfo">Racer Info <span class="caret"></span></a>
+            <li><a href="/"><span class="glyphicon glyphicon-home"></span></a></li>
+            <li class="dropdown active"><a href="/RacerInfo">Racer Info <span class="caret"></span></a>
               <ul class="dropdown-menu">
                 <li><a href="/RacerInfo#Fees">Fees</a></li>
                 <li><a href="/RacerInfo#Memberships">Memberships</a></li>
@@ -160,7 +161,7 @@
     </div>
 
     <div class="row">
-      <div class="col-7 col-m-7 main mainRacerInfo">
+      <div class="col-7 col-m-7 main mainCenter">
       
         <h1 id="Fees">FEES</h1>
         <div id="Fees">
