--- a/src/test/SponsorsTEST.html
+++ b/src/test/SponsorsTEST.html
@@ -38,10 +38,11 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>                        
           </button>
+          <a class="navbar-brand" href="/"><img src="/SISLRA/NavbarLogo.png" alt="SISLRA"></a>
         </div>
         <div class="collapse navbar-collapse" id="myNavbar">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="/"><span class="glyphicon glyphicon-home"></span></a></li>
+            <li><a href="/"><span class="glyphicon glyphicon-home"></span></a></li>
             <li class="dropdown"><a href="/RacerInfo">Racer Info <span class="caret"></span></a>
               <ul class="dropdown-menu">
                 <li><a href="/RacerInfo#Fees">Fees</a></li>
@@ -64,7 +65,7 @@
                 <li><a href="/Events#Posters">Posters</a></li>
               </ul>
             </li>
-            <li class="dropdown"><a href="/Sponsors">Sponsors <span class="caret"></span></a>
+            <li class="dropdown active"><a href="/Sponsors">Sponsors <span class="caret"></span></a>
               <ul class="dropdown-menu">
                 <li><a href="/Sponsors#BandDForklift">B&D Forklift</a></li>
                 <li><a href="/Sponsors#Searles">Searles</a></li>
@@ -160,7 +161,7 @@
     </div>
 
     <div class="row">
-      <div class="col-7 col-m-7 main mainSponsors">
+      <div class="col-7 col-m-7 main mainCenter">
 
         <h1>2017 Lane Sponsors</h1>
         
