--- a/src/test/indexTEST.html
+++ b/src/test/indexTEST.html
@@ -40,8 +40,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>                        
           </button>
-          <a class="navbar-brand" href="/"><img src="/SISLRA/WebBanner.png" alt="SISLRA">
-          </a>
+          <a class="navbar-brand" href="/"><img src="/SISLRA/NavbarLogo.png" alt="SISLRA"></a>
         </div>
         <div class="collapse navbar-collapse" id="myNavbar">
           <ul class="nav navbar-nav">
