Finished ContactUsTEST.html. Started and Finish 404TEST.html. Plus Some tweaks.

--- a/src/test/AboutUsTEST.html
+++ b/src/test/AboutUsTEST.html
@@ -193,7 +193,8 @@
           <p>Western Speedway 2207 Millstream Rd, Victoria, B.C. Canada.</p>
           <p>HWY-1 take Exit 14 (Millstream Rd North, toward Highlands/Langford) to Millstream Rd. Continue North/West on Millstream Rd.
              for 2.54 km until you reach Western Speedway 2207 Millstream Rd. Victoria, B.C. V9B-6H4</p>
-          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2645.2686272832516!2d-123.50331089999999!3d48.4705608!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x548f0d506c5c3a71%3A0xd20cbb669f2015f7!2s2207+Millstream+Rd%2C+Victoria%2C+BC+V9B+6H4!5e0!3m2!1sen!2sca!4v1455568106379" style="border:5px; width: 580px; height: 480px;" allowfullscreen></iframe>
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2645.2686272832516!2d-123.50331089999999!3d48.4705608!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x548f0d506c5c3a71%3A0xd20cbb669f2015f7!2s2207+Millstream+Rd%2C+Victoria%2C+BC+V9B+6H4!5e0!3m2!1sen!2sca!4v1455568106379"
+                  style="border:5px; width: 100%; height: 500px;" allowfullscreen></iframe>
         </div>
           
       </div>
