--- a/src/test/SponsorsTEST.html
+++ b/src/test/SponsorsTEST.html
@@ -170,7 +170,7 @@
           <div class="TableSponsors-row">
             <div class="TableSponsors-section">
               <h3>Pit Lane Sponsored by:</h3>
-              <a href="http://bdlifttruck.ca/" target="_blank"><img id="BandDForklift" src="/SISLRA/YearSponsors/BandDForklift-300x87.jpg" alt="TowerLaneSponsor" width="300" /></a>
+              <a href="http://bdlifttruck.ca/" target="_blank"><img id="BandDForklift" src="/SISLRA/YearSponsors/BandDForklift-300x87.jpg" alt="TowerLaneSponsor" width="300" height="170" /></a>
               <p>Celebrating 30 Years of Service; B&D Lift Truck Service Ltd. has been serving the forklift needs of Vancouver Island businesses' since 1984.
                 They provide sales, rental, service and maintenance, and operator training. 100% family owned and operated, B&D Lift Truck Service Ltd. is 
                 the Island's forklift specialist. Contact them at <a href="http://bdlifttruck.ca/" target="_blank">bdlifttruck.ca</a></p>
@@ -181,7 +181,7 @@
             <div class="TableSponsors-section">
               <h3>Pit Lane Sponsored by:</h3>
               <a href="http://searlesauto.ca/" target="_blank"><img id="Searles" src="/SISLRA/YearSponsors/Searles.jpg" alt="PitLaneSponsor" width="380" /></a>
-              <p style="margin-top: -5px;">In operation in since 1979, Searle's, is known by many for its quality work and honesty.
+              <p>In operation in since 1979, Searle's, is known by many for its quality work and honesty.
                 With well trained mechanics, quality parts, and cutting edge diagnostics, they work on any make
                 or model, specializing in Air Conditioning. Searle's Auto Repair is a member of the Better Business
                 Bureau, the Chamber of Commerce. And are a member of the AUTOPRO GROUP, which allows them to provide
