Finished all pages including EventsTEST.html. Still have some tweaking to do. Fixed some pages that weren't working on mobile device properly. Adjusted copy right at bottom of all pages. Simplified header count down. Updated sponsors logo. Disabled poster modal when on mobile devices smaller then tables. Re centred points winners table.
To do:
adjust size of footer Logo on mobile devices.
Header Countdown adjusting issue.
Sponsors page not adapting properly to mobile devices.
Change sidebarcolor name.

--- a/src/test/ContactUsTEST.html
+++ b/src/test/ContactUsTEST.html
@@ -172,7 +172,7 @@
               <th>Executives:</th>
               <th>Name</th>
               <th>Car</th>
-              <th style="width: 88px;">Phone</th>
+              <th id="contactPhone">Phone</th>
               <th>Email</th>
             </tr>
             <tr>
@@ -206,7 +206,7 @@
             <tr>
               <td>Treasurer</td>
               <td>Bill Jamieson Jr.</td>
-              <td>#63</td>
+              <td>#263</td>
               <td>250-382-8792</td>
               <td><a href="mailto:mrpontiac55@gmail.com">mrpontiac55@gmail.com</a></td>
             </tr>
@@ -220,7 +220,7 @@
             <tr>
               <td>Membership Director</td>
               <td>Bill Jamieson Jr.</td>
-              <td>#63</td>
+              <td>#263</td>
               <td>250-382-8792</td>
               <td><a href="mailto:mrpontiac55@gmail.com">mrpontiac55@gmail.com</a></td>
             </tr>
@@ -248,7 +248,7 @@
             <tr>
               <td>Silent Auction Coordinator</td>
               <td>Bill Jamieson Jr.</td>
-              <td>#63</td>
+              <td>#263</td>
               <td>250-382-8792</td>
               <td><a href="mailto:mrpontiac55@gmail.com">mrpontiac55@gmail.com</a></td>
             </tr>
@@ -353,7 +353,7 @@
             <tr>
               <td>Burnout Box</td>
               <td>Bill Jamieson Sr.</td>
-              <td>(#63)</td>
+              <td>(#263)</td>
               <td>&nbsp;</td>
               <td>&nbsp;</td>
             </tr>
@@ -437,7 +437,7 @@
             <tr>
               <td>&nbsp;</td>
               <td>Bill Jamieson Jr.</td>
-              <td>#63</td>
+              <td>#263</td>
               <td>250-382-8792</td>
               <td><a href="mailto:mrpontiac55@gmail.com">mrpontiac55@gmail.com</a></td>
             </tr>
@@ -447,8 +447,8 @@
       
       <div class="col-3 col-m-12">
         <div class="aside sideBarColor">
-          <h2 id="links" style="text-align: center;">Other Tracks and Clubs</h2>
-          <ul style="font-size:14px; text-align: center; list-style-type: none;">
+          <h2 id="links">Other Tracks and Clubs</h2>
+          <ul>
             <li><a href="http://www.westernspeedway.net/" target="_blank">Western Speedway</a></li>
             <li><a href="http://www.northislandtimingassociation.com/" target="_blank">North Island Timing Association</a></li>
             <li><a href="https://vimsa.ca/" target="_blank">Vancouver Island Motorsports Association</a></li>
@@ -472,8 +472,8 @@
               <a class="buttonHyperLink" href="https://twitter.com/DragRaceVic" target="_blank"><span class="social social-twitter x2"></span></a>
               <a class="buttonHyperLink" href="https://www.instagram.com/dragracevictoria/?hl=en" target="_blank"><span class="social social-instagram x2"></span></a>
               <a class="buttonHyperLink" href="https://www.youtube.com/user/nostopinLucR" target="_blank"><span class="social social-youtube x2"></span></a>
-              <p><a href="/">Home </a>| <a href="/Points.html">Points </a>| <a href="/Sponsors.html">Sponsors</a></p>
-              <p><a href="/ContactUs">Contact Us </a>| <a href="/AboutUs">About Us</a></p>
+              <p><a href="/">Home </a><span class="defaultCursor">| </span><a href="/Points.html">Points </a><span class="defaultCursor">| </span><a href="/Sponsors.html">Sponsors</a></p>
+              <p><a href="/ContactUs">Contact Us </a><span class="defaultCursor">| </span><a href="/AboutUs">About Us</a></p>
             </div>
           </div>
           <div class="footer-section">
@@ -528,9 +528,9 @@
       </div>
       
       <div id="footerCopyright">
-        <p> Copyright &copy; 2005<script src="/JavaScript/Copyright.js"></script>, All rights reserved.</p>
-      </div> <!-- end of footer -->
-    </div>
+        <p> Copyright &copy; <script src="/JavaScript/Copyright.js"></script>. All Rights Reserved.</p>
+      </div>
+    </div> <!-- end of footer -->
 
   </body>
 </html>
