--- a/src/test/RacerInfoTEST.html
+++ b/src/test/RacerInfoTEST.html
@@ -161,10 +161,10 @@
     </div>
 
     <div class="row">
-      <div class="col-7 col-m-7 main mainCenter">
+      <div class="col-7 col-m-7 main mainCenter listStyleDisc">
       
         <h1 id="Fees">FEES</h1>
-        <div id="Fees">
+        <div id="feesDiv">
           <p>Members Entry Fees Per Race</p>
           <br>
           <p><strong>Street Class</strong> - $30.00 for vehicle and member*</p>
@@ -208,7 +208,8 @@
         <h1 id="RaceClassesAndTimes">RACE CLASSES AND TIMES</h1>
         <div class="alignLeft">
           <p>NEW: Pro Class times are now 5.79 seconds or faster and Street Class is now 5.80 seconds or slower.</p>
-          <ul style="list-style-type: disc;">
+          <ul>
+            <li><strong>ANY VEHICLES THAT RACE THE TRACK AT 5.22 SECONDS OR FASTER MUST HAVE A ROLE CAGE!</strong></li>
             <li>Pro Class: Cars that race the track in 5.79 seconds or faster with No electronics and No Delay Boxes.</li>
             <li>Street Class: Street legal cars that race the track in 5.80 seconds or slower.</li>
             <li>Bike Class: A variety of street bikes, sport bikes, race bikes and drag race bikes.</li>
@@ -236,7 +237,7 @@
           <p><strong>SISLRA follows all NHRA rules.  The following information includes some  highlights and important things we look for;</strong></p>
           <p><strong><u>TECHNICAL INSPECTION</u></strong></p>
           <p><strong>Technical/Safety inspection: You must have;</strong></p>
-          <ul style="list-style-type: disc;">
+          <ul>
             <li>Snell 05 Helmet. (Snell approved with a manufacture date of 2005 or newer.)</li>
             <li>Valid Drivers Licence.</li>
             <li>Medical I.D. Card.</li>
@@ -251,7 +252,7 @@
             <li>Unless specified in your vehicle's warranty, vehicles should <u>not</u> be using <strong>Antifreeze</strong> as it makes a mess of the track and could cause a bad accident if the vehicle that follows you in that lane gets caught up in it. </li>
           </ul>
           <p>***Racers who use antifreeze are subject to track fines. ***</p>
-          <ul style="list-style-type: disc;">  
+          <ul>  
             <li>Please adhere to all track rules as the Race Director and the crew has the power to hand out penalties as well as fines or other disciplinary actions. </li>
             <li>All drivers 16-18 years old must have parent consent forms with them.</li>
             <li>For safety reasons, trailered cars must be walked out of race area (one person on each side).</li>
@@ -263,7 +264,7 @@
         <h1 id="TheTrack">THE TRACK</h1>
         <img src="/SISLRA/RacersInfo/TheTrack.png" alt="The Track" style="width: 75%;" />
         <div class="alignLeft" style="margin-top: 15px;">
-          <ul style="list-style-type: disc;">
+          <ul>
             <li>SHUT DOWN AREA: This is the area of track after the finish line when you slow your car down prior to returning to the pit area. THIS IS A SAFETY RULE: The PIT lane vehicle after every run turns off the end of the track surface <u>first</u>. The TOWER lane vehicle must ALWAYS yield to the pit lane.</li>
             <li>Stop at the back of the track area to get time slips. (<strong>No burnouts in this area</strong>.) </li>
             <li>DO NOT test your car in the staging lanes. </li>
@@ -281,7 +282,7 @@
           <p><strong>A</strong>. Your driver number and class must be on both the driver's side window and the right hand side  of your windshield before entering the track area. They must be 6 inches in height and clearly visible.</p>
           <p><strong>B</strong>. Dial-in times must be <strong>6 inches in height</strong> and <strong>clearly visible</strong> on <strong>both</strong> the driver's side window and the passenger side of your windshield to be easily seen by the  officials in the tower.</p>
           <p><em>White shoe polish or <strong>Dial-in</strong> from Lordco works well for writing your dial-in on your windows and easily wipes off.</em></p>
-          <ul style="list-style-type: disc;">
+          <ul>
             <li>Any driver planning on deep staging must ensure that they have a "<strong>D</strong>" posted  clearly on both their driver side window and on the right hand side of their windshield.  Any driver that does not do this will be disqualified from the day's event. </li>
             <li>The practice of transbrake, converter stall, line loc testing, and/or transmission warming is prohibited in all classes unless the vehicle is on approved jackstands. Non-compliance is grounds for disqualification from the day's event.</li>
             <li>Anytime a vehicle is to be raised off the ground for access, it must be supported by TWO jackstands with a minimum ground clearance of SEVEN inches. Non-compliance is grounds for disqualification from the day's event.  As this is a safety infraction, a second  incident will face a $50.00 fine as well as a two-event penalty. </li>
@@ -299,7 +300,7 @@
               <li>Each  driver receives a time slip which the driver picks up from the Printer Shack. </li>
               <li>Driver  information from you and your opponent is on the Time Slip and includes;</li>
             </ul>
-            <ul style="list-style-type: disc;">
+            <ul>
               <li><strong>Driver's name</strong></li>
               <li><strong>Car number</strong></li>
               <li><strong>Tree Speed</strong>; the time it takes for each amber  and green to come on after the previous bulb. It will usually be a Sportsman Tree, which is .500</li>
@@ -316,7 +317,7 @@
             <br>
 
             <p>Other  racing terminology includes;</p>
-            <ul style="list-style-type: disc;">
+            <ul>
               <li><strong>Christmas Tree</strong>; refers to the lighting system used for drag racing.</li>
               <li><strong>Breakout</strong>; refers to a driver running quicker than his or her "dial-in".</li>
               <li><strong>Hole shot</strong>; reacting quicker to the Christmas Tree starting light to win against a quicker opponent. </li>
@@ -329,7 +330,7 @@
             <br>
 
             <p><strong><u>ELIMINATIONS</u></strong><strong> </strong></p>
-            <ul style="list-style-type: disc;">
+            <ul>
               <li>Eliminations in layman's term are when you start your real racing. </li>
               <li>When going into eliminations, you want to look at all your time-slips from  qualifying.</li>
               <li>You want to compare your 'E.T's' for all of your qualifying runs, see if your time has improved from your first to your last qualifying run then decide what time you should put on your windows as your "dial-in". </li>
@@ -357,7 +358,7 @@
           <p>All race day questions or concerns should be  taken to the Race Director.</p>
           <p><strong>Please remember that it is strictly enforced that there is absolutely NO ALCOHOL or ILLEGAL DRUGS permitted at the track on race days.</strong></p>
           <p><strong>Racing don'ts...</strong></p>
-          <ul style="list-style-type: disc;">
+          <ul>
             <li>If you pick up your time slip and your reaction time has a ( - )  in front of it, you have possibly lost. Why you ask? Because it means that you left before the light actually turned green. This is an easy way to say "red light".</li>
             <li>Getting a 'red light' is not relevant during qualifying; in fact some drivers do it  just to see how close they can cut the lights.</li>
             <li>The object of winning the race is to have a perfect reaction time to the light as  well as crossing the finish line exactly on your dial in. Go faster than your dial in you'll break out, too slow and chances are you will be so far away from your "dial-in" that your opponent will cross the finish line first.</li>
@@ -418,8 +419,8 @@
               <a class="buttonHyperLink" href="https://twitter.com/DragRaceVic" target="_blank"><span class="social social-twitter x2"></span></a>
               <a class="buttonHyperLink" href="https://www.instagram.com/dragracevictoria/?hl=en" target="_blank"><span class="social social-instagram x2"></span></a>
               <a class="buttonHyperLink" href="https://www.youtube.com/user/nostopinLucR" target="_blank"><span class="social social-youtube x2"></span></a>
-              <p><a href="/">Home </a>| <a href="/Points.html">Points </a>| <a href="/Sponsors.html">Sponsors</a></p>
-              <p><a href="/ContactUs">Contact Us </a>| <a href="/AboutUs">About Us</a></p>
+              <p><a href="/">Home </a><span class="defaultCursor">| </span><a href="/Points.html">Points </a><span class="defaultCursor">| </span><a href="/Sponsors.html">Sponsors</a></p>
+              <p><a href="/ContactUs">Contact Us </a><span class="defaultCursor">| </span><a href="/AboutUs">About Us</a></p>
             </div>
           </div>
           <div class="footer-section">
@@ -474,9 +475,9 @@
       </div>
       
       <div id="footerCopyright">
-        <p> Copyright &copy; 2005<script src="/JavaScript/Copyright.js"></script>, All rights reserved.</p>
-      </div> <!-- end of footer -->
-    </div>
+        <p> Copyright &copy; <script src="/JavaScript/Copyright.js"></script>. All Rights Reserved.</p>
+      </div>
+    </div> <!-- end of footer -->
 
   </body>
 </html>
