--- a/src/test/indexTEST.html
+++ b/src/test/indexTEST.html
@@ -245,7 +245,7 @@
           <a class="twitter-timeline" data-width="100%" data-height="228" data-theme="dark" data-link-color="#FAB81E" href="https://twitter.com/DragRaceVic"> </a> 
           <script async charset="utf-8" src="/JavaScript/twitterCode.js"></script>
 
-          <h3 style="text-align: center;">2016 1st Place Points Winners.</h3>
+          <h3>2016 1st Place Points Winners.</h3>
 
           <table class="indexWinnersTable">
             <tr>
@@ -262,7 +262,7 @@
             </tr> -->
           </table>
 
-          <h3 style="text-align: center;">Congratulations to all Racers.</h3>
+          <h3>Congratulations to all Racers.</h3>
           
             <div class="indexPointsList">
               <h2 id="pro">Pro Class</h2>
@@ -291,8 +291,8 @@
               <a class="buttonHyperLink" href="https://twitter.com/DragRaceVic" target="_blank"><span class="social social-twitter x2"></span></a>
               <a class="buttonHyperLink" href="https://www.instagram.com/dragracevictoria/?hl=en" target="_blank"><span class="social social-instagram x2"></span></a>
               <a class="buttonHyperLink" href="https://www.youtube.com/user/nostopinLucR" target="_blank"><span class="social social-youtube x2"></span></a>
-              <p><a href="/">Home </a>| <a href="/Points.html">Points </a>| <a href="/Sponsors.html">Sponsors</a></p>
-              <p><a href="/ContactUs">Contact Us </a>| <a href="/AboutUs">About Us</a></p>
+              <p><a href="/">Home </a><span class="defaultCursor">| </span><a href="/Points.html">Points </a><span class="defaultCursor">| </span><a href="/Sponsors.html">Sponsors</a></p>
+              <p><a href="/ContactUs">Contact Us </a><span class="defaultCursor">| </span><a href="/AboutUs">About Us</a></p>
             </div>
           </div>
           <div class="footer-section">
@@ -347,9 +347,9 @@
       </div>
       
       <div id="footerCopyright">
-        <p> Copyright &copy; 2005<script src="/JavaScript/Copyright.js"></script>, All rights reserved.</p>
-      </div> <!-- end of footer -->
-    </div>
+        <p> Copyright &copy; <script src="/JavaScript/Copyright.js"></script>. All Rights Reserved.</p>
+      </div>
+    </div> <!-- end of footer -->
 
   </body>
 </html>
