--- a/src/test/AboutUsTEST.html
+++ b/src/test/AboutUsTEST.html
@@ -177,7 +177,7 @@
           <li>&nbsp;&nbsp;&nbsp;&nbsp;South Island Straight Liners Racing Association</li>
           <li>2. The purposes of the Society are:</li>
         </ul>
-        <ol style="list-style-type:upper-alpha;Margin:0px;">
+        <ol style="list-style-type: upper-alpha; margin:0px;">
           <li>To promote high performance motor vehicle safety on Vancouver Island.</li>
           <li>To promote motor vehicle soundness.</li>
           <li>To test high performance motor vehicles in a controlled environment.</li>
@@ -212,8 +212,8 @@
               <a class="buttonHyperLink" href="https://twitter.com/DragRaceVic" target="_blank"><span class="social social-twitter x2"></span></a>
               <a class="buttonHyperLink" href="https://www.instagram.com/dragracevictoria/?hl=en" target="_blank"><span class="social social-instagram x2"></span></a>
               <a class="buttonHyperLink" href="https://www.youtube.com/user/nostopinLucR" target="_blank"><span class="social social-youtube x2"></span></a>
-              <p><a href="/">Home </a>| <a href="/Points.html">Points </a>| <a href="/Sponsors.html">Sponsors</a></p>
-              <p><a href="/ContactUs">Contact Us </a>| <a href="/AboutUs">About Us</a></p>
+              <p><a href="/">Home </a><span class="defaultCursor">| </span><a href="/Points.html">Points </a><span class="defaultCursor">| </span><a href="/Sponsors.html">Sponsors</a></p>
+              <p><a href="/ContactUs">Contact Us </a><span class="defaultCursor">| </span><a href="/AboutUs">About Us</a></p>
             </div>
           </div>
           <div class="footer-section">
@@ -268,9 +268,9 @@
       </div>
       
       <div id="footerCopyright">
-        <p> Copyright &copy; 2005<script src="/JavaScript/Copyright.js"></script>, All rights reserved.</p>
-      </div> <!-- end of footer -->
-    </div>
+        <p> Copyright &copy; <script src="/JavaScript/Copyright.js"></script>. All Rights Reserved.</p>
+      </div>
+    </div> <!-- end of footer -->
 
   </body>
 </html>
