Changed sidebarcolor name to themeColor. Fixed Sponsors page not adapting properly to mobile devices.
To do:
adjust size of footer Logo on mobile devices.
Header Countdown adjusting issue.

--- a/src/test/AboutUsTEST.html
+++ b/src/test/AboutUsTEST.html
@@ -200,7 +200,7 @@
       </div>
     </div> <!-- End of row -->
 
-    <div class="footer sideBarColor">
+    <div class="footer themeColor">
       <div id="footerSocial">
         <div class="footer-row">
           <div class="footer-section">
