--- a/src/test/SponsorsTEST.html
+++ b/src/test/SponsorsTEST.html
@@ -180,7 +180,7 @@
             </div>
             <div class="TableSponsors-section">
               <h3>Pit Lane Sponsored by:</h3>
-              <a href="http://searlesauto.ca/" target="_blank"><img id="Searles" src="/SISLRA/YearSponsors/Searles.jpg" alt="PitLaneSponsor" width="380" /></a>
+              <a href="http://searlesauto.ca/" target="_blank"><img id="Searles" src="/SISLRA/YearSponsors/Searles.jpg" alt="PitLaneSponsor" width="345" /></a>
               <p>In operation in since 1979, Searle's, is known by many for its quality work and honesty.
                 With well trained mechanics, quality parts, and cutting edge diagnostics, they work on any make
                 or model, specializing in Air Conditioning. Searle's Auto Repair is a member of the Better Business
@@ -195,7 +195,7 @@
       <div class="col-7 col-m-7 main mainCenter">
         <h1>Supporting Sponsors:</h1>
         
-        <a href="http://www.382sign.com/" target="_blank"><img id="GraphicFX" src="/SISLRA/YearSponsors/GraphicFX.png" alt="Graphic FX" width="380" /></a>
+        <a href="http://www.382sign.com/" target="_blank"><img id="GraphicFX" src="/SISLRA/YearSponsors/GraphicFX.png" alt="Graphic FX" width="345" /></a>
         <p>Thanks goes out to Graphic FX Signworks for our Tower Schedule sign. Graphic FX specializes in professional and affordable
            vehicle graphics, business signage and digital printing services.  From start to finish they can design any sized job through
            computer designed proofs and customer interaction.  Quality is important to them.  All their services are manufactured in-house,
@@ -268,7 +268,7 @@
       </div>
     </div> <!-- End of row -->
 
-    <div class="footer sideBarColor">
+    <div class="footer themeColor">
       <div id="footerSocial">
         <div class="footer-row">
           <div class="footer-section">
