--- a/src/test/404TEST.html
+++ b/src/test/404TEST.html
@@ -176,7 +176,7 @@
       </div>
     </div> <!-- End of row -->
 
-    <div class="footer sideBarColor">
+    <div class="footer themeColor">
       <div id="footerSocial">
         <div class="footer-row">
           <div class="footer-section">
