--- a/src/test/ContactUsTEST.html
+++ b/src/test/ContactUsTEST.html
@@ -446,7 +446,7 @@
       </div>
       
       <div class="col-3 col-m-12">
-        <div class="aside sideBarColor">
+        <div class="aside themeColor">
           <h2 id="links">Other Tracks and Clubs</h2>
           <ul>
             <li><a href="http://www.westernspeedway.net/" target="_blank">Western Speedway</a></li>
@@ -460,7 +460,7 @@
       </div>
     </div> <!-- End of row -->
 
-    <div class="footer sideBarColor">
+    <div class="footer themeColor">
       <div id="footerSocial">
         <div class="footer-row">
           <div class="footer-section">
