--- a/src/test/RacerInfoTEST.html
+++ b/src/test/RacerInfoTEST.html
@@ -407,7 +407,7 @@
       </div>
     </div> <!-- End of row -->
 
-    <div class="footer sideBarColor">
+    <div class="footer themeColor">
       <div id="footerSocial">
         <div class="footer-row">
           <div class="footer-section">
