--- a/src/test/indexTEST.html
+++ b/src/test/indexTEST.html
@@ -163,7 +163,7 @@
 
     <div class="row">
       <div class="col-3 col-m-6">
-        <div class="menu sideBarColor">
+        <div class="menu themeColor">
           
           <h3><a href="/Points"><span class="glyphicons glyphicons-coins"></span>Points: <span id="PointsUpdate"></span></a></h3>
           <h3><a href="/Events#RaceSchedule"><span class="glyphicons glyphicons-calendar"></span>2017 Schedule:</a></h3>
@@ -240,7 +240,7 @@
       </div>
 
       <div class="col-3 col-m-12">
-        <div class="aside sideBarColor">
+        <div class="aside themeColor">
           
           <a class="twitter-timeline" data-width="100%" data-height="228" data-theme="dark" data-link-color="#FAB81E" href="https://twitter.com/DragRaceVic"> </a> 
           <script async charset="utf-8" src="/JavaScript/twitterCode.js"></script>
@@ -279,7 +279,7 @@
       </div>
     </div> <!-- End of row -->
 
-    <div class="footer sideBarColor">
+    <div class="footer themeColor">
       <div id="footerSocial">
         <div class="footer-row">
           <div class="footer-section">
