--- a/src/test/PointsTEST.html
+++ b/src/test/PointsTEST.html
@@ -137,7 +137,7 @@
         <img src="/SISLRA/Slides/Untitled-18.jpg" alt="Slide18"/>
       </div>
       <script src="/JavaScript/headerSlideShow.js"></script>
-      <div w3-include-html="/test/header.html"></div>
+      <div w3-include-html="/inc/header.html"></div>
     </div>
 
     <div class="row">
@@ -164,8 +164,8 @@
 
     <div class="footer themeColor">
 
-      <div w3-include-html="/test/footerSocial.html"></div> <!-- Start Of Footer -->
-      <div w3-include-html="/test/footerSponsors.html"></div>
+      <div w3-include-html="/inc/footerSocial.html"></div> <!-- Start Of Footer -->
+      <div w3-include-html="/inc/footerSponsors.html"></div>
   
       <script>
         w3IncludeHTML();
