Downloaded jquery.min.js and bootstrap.min.js for local preposes. Used Bootstrap modal for yearPoster and StreetCarShootout.jpg and removed all old modal code. Updated StreetCarShootout.jpg. Change voluteerNeeded colour scheme on contactUs page. Now Included NavBar instead of pasting it on every page. With "active class" being ID'd by individual CSS on every Page. Fixed sponsors page whe in mobile mode again. Cleaned up CSS for countdown timer. Cleaned Up CSS.

--- a/src/inc/header.html
+++ b/src/inc/header.html
@@ -1,4 +1,4 @@
-<div class="animated fadeIn marquee" id="indexMarquee">
+<div class="animated fadeIn marquee">
   <div>
     <span class="marqueeInfo"></span>
     <span class="marqueeInfo"></span>
@@ -7,18 +7,18 @@
 
 <a href="/"><img class="animated flipInX Webbanner" src="/SISLRA/WebBanner.png" alt="SISLRA" /></a>
 
-<div class="animated fadeIn indexTableHeader">
-  <div class="indexTableHeader-row">
-    <div class="indexTableHeader-section">
-      <h3><a href="/Events#RaceSchedule"><span class="sislraDate"></span></a></h3>
+<div class="animated fadeIn CountDownTable">
+  <div class="CountDownTable-row">
+    <div class="CountDownTable-section">
+      <h3><a href="/Events#RaceSchedule">Next SISLRA Race</a></h3>
       <div id="SISLRARace">&nbsp;</div>
     </div>
-    <div class="indexTableHeader-section">
-      <h3><a href="http://www.northislandtimingassociation.com/" target="_blank"><span class="RumbleOnTheRunwayDate"></span></a></h3>
+    <div class="CountDownTable-section">
+      <h3><a href="http://www.northislandtimingassociation.com/" target="_blank">Next Rumble on the Runway</a></h3>
       <div id="PortMcNeill">&nbsp;</div>
     </div>
-    <div class="indexTableHeader-section">
-      <h3><a href="http://www.albernidragracing.com/" target="_blank"><span class="ThunderInTheValleyDate"></span></a></h3>
+    <div class="CountDownTable-section">
+      <h3><a href="http://www.albernidragracing.com/" target="_blank">Thunder in The Valley</a></h3>
       <div id="PortAlberni">&nbsp;</div>
     </div>
   </div>
