--- a/src/inc/navBar.html
+++ b/src/inc/navBar.html
@@ -63,6 +63,7 @@
         <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button">Calculators <span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li><a href="#" data-toggle="modal" data-target="#ETConverterModal">ET Converter</a></li>
+            <li><a href="#" data-toggle="modal" data-target="#winCalculatorModal">Win Calculator</a></li>
           </ul>
         </li>
         <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"><span class="filetypes filetypes-pdf"></span> PDF<span class="caret"></span></a>
