Put all calculator code in Calculators.js. Calculators are now in beta. Squished tabs in navBar. Added fontawesome.js to makes the social buttons look better. Created custom hover animation colour scheme and button like showing to social buttons. Changed hyperlink colour scheme and add button like shadowing. Added hyperlink to webbanner in footerSocial.html.js Fixed Sponsors.html saying pit lane when it was suppose to say tower lane. Changed alerts to callback to make things fit better.

--- a/src/inc/navBar.html
+++ b/src/inc/navBar.html
@@ -1,4 +1,4 @@
-<nav ng-controller="MainCtrl" ng-app=app class="navbar navbar-inverse navbar-fixed-top">
+<nav class="navbar navbar-inverse navbar-fixed-top">
   <div class="container-fluid">
     <div class="navbar-header">
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
@@ -13,7 +13,7 @@
         <li id="indexActiveNavBar"><a href="/"><span class="glyphicon glyphicon-home"></span></a></li>
         <li id="racerInfoActiveNavBar" class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button">Racer Info <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="/RacerInfo#Fees">Fees</a></li>
+            <li><a href="/RacerInfo">Fees</a></li>
             <li><a href="/RacerInfo#Memberships">Memberships</a></li>
             <li><a href="/RacerInfo#DriverInformationSheet">Driver Information Sheet</a></li>
             <li><a href="/RacerInfo#RaceClassesAndTimes">Classes & Times</a></li>
@@ -29,14 +29,14 @@
         <li id="pointsActiveNavBar"><a href="/Points">Points</a></li>
         <li id="eventsActiveNavBar" class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button">Events <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="/Events#RaceSchedule">Race Schedule</a></li>
+            <li><a href="/Events">Race Schedule</a></li>
             <li><a href="/Events#Posters">Posters</a></li>
           </ul>
         </li>
         <li id="sponsorsActiveNavBar" class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button">Sponsors <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="/Sponsors#BandDForklift">B&D Forklift</a></li>
-            <li><a href="/Sponsors#Searles">Searles</a></li>
+            <li><a href="/Sponsors">B&D Forklift</a></li>
+            <li><a href="/Sponsors">Searles</a></li>
             <li><a href="/Sponsors#GraphicFX">GraphicFX</a></li>
             <li><a href="/Sponsors#Dentex">Dentex</a></li>
             <li><a href="/Sponsors#Lordco">Lordco</a></li>
@@ -74,10 +74,10 @@
         </li>
       </ul>
       <div class="nav navbar-nav navbar-right">
-        <a href="https://www.facebook.com/groups/327092727329942/" target="_blank" class="btn btn-primary" role="button" data-toggle="tooltip" data-placement="bottom" title="Facebook" style="color: #FFF;  margin-top: 4%;"><span class="social social-facebook"></span></a>
-        <a href="https://twitter.com/DragRaceVic" target="_blank" class="btn btn-info" role="button" data-toggle="tooltip" data-placement="bottom" title="Twitter" style="color: #FFF;  margin-top: 4%;"><span class="social social-twitter"></span></a>
-        <a href="https://www.instagram.com/dragracevictoria/?hl=en" target="_blank" class="btn btn-default" role="button" data-toggle="tooltip" data-placement="bottom" title="Instagram" style="color: #000;  margin-top: 4%;"><span class="social social-instagram"></span></a>
-        <a href="https://www.youtube.com/user/nostopinLucR" target="_blank" class="btn btn-danger" role="button" data-toggle="tooltip" data-placement="bottom" title="YouTube" style="color: #FFF; margin-top: 4%;"><span class="social social-youtube"></span></a>          &nbsp;
+        <a class="social" href="https://www.facebook.com/groups/327092727329942/"  target="_blank" data-toggle="tooltip" data-placement="bottom" title="Facebook">  <i class="fa fa-facebook fa-2x"     aria-hidden="true"></i></a>
+        <a class="social" href="https://twitter.com/DragRaceVic"                   target="_blank" data-toggle="tooltip" data-placement="bottom" title="Twitter">   <i class="fa fa-twitter fa-2x"      aria-hidden="true"></i></a>
+        <a class="social" href="https://www.instagram.com/dragracevictoria/?hl=en" target="_blank" data-toggle="tooltip" data-placement="bottom" title="Instagram"> <i class="fa fa-instagram fa-2x"    aria-hidden="true"></i></a>
+        <a class="social" href="https://www.youtube.com/user/nostopinLucR"         target="_blank" data-toggle="tooltip" data-placement="bottom" title="YouTube">   <i class="fa fa-youtube-play fa-2x" aria-hidden="true"></i></a>
       </div>
     </div>
   </div>
