--- a/src/inc/ETConverterModal.html
+++ b/src/inc/ETConverterModal.html
@@ -3,7 +3,7 @@
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal">&times;</button>
-        <h4 class="modal-title">Track Time Converter</h4>
+        <h4 class="modal-title">Track Time Converter <br><span style="color: #F00;">Beta*</span></h4>
       </div>
       <div class="modal-body">
         <div>
