--- a/src/inc/footerSocial.html
+++ b/src/inc/footerSocial.html
@@ -1,14 +1,14 @@
 <div id="footerSocial">
   <div class="footer-row">
     <div class="footer-section">
-      <img id="SISLRALogo-Footer" src="/SISLRA/WebBanner.png" alt="SISLRA" />
+      <a href="/"><img id="SISLRALogo-Footer" src="/SISLRA/WebBanner.png" alt="SISLRA" /></a>
     </div>
     <div class="footer-section">
       <div id="SocialMediaDiv-Footer">
-        <a class="buttonHyperLink" href="https://www.facebook.com/groups/327092727329942/" target="_blank"><span class="social social-facebook x2"></span></a>
-        <a class="buttonHyperLink" href="https://twitter.com/DragRaceVic" target="_blank"><span class="social social-twitter x2"></span></a>
-        <a class="buttonHyperLink" href="https://www.instagram.com/dragracevictoria/?hl=en" target="_blank"><span class="social social-instagram x2"></span></a>
-        <a class="buttonHyperLink" href="https://www.youtube.com/user/nostopinLucR" target="_blank"><span class="social social-youtube x2"></span></a>
+        <a href="https://www.facebook.com/groups/327092727329942/" target="_blank"><i class="fa fa-facebook fa-3x" aria-hidden="true"></i></a>
+        <a href="https://twitter.com/DragRaceVic" target="_blank"><i class="fa fa-twitter fa-3x" aria-hidden="true"></i></a>
+        <a href="https://www.instagram.com/dragracevictoria/?hl=en" target="_blank"><i class="fa fa-instagram fa-3x" aria-hidden="true"></i></a>
+        <a href="https://www.youtube.com/user/nostopinLucR" target="_blank"><i class="fa fa-youtube-play fa-3x" aria-hidden="true"></i></a>
         <p><a href="/">Home </a><span class="defaultCursor">| </span><a href="/Points.html">Points </a><span class="defaultCursor">| </span><a href="/Sponsors.html">Sponsors</a></p>
         <p><a href="/ContactUs">Contact Us </a><span class="defaultCursor">| </span><a href="/AboutUs">About Us</a></p>
       </div>
